--- a/Projects/projects/projects.html
+++ b/Projects/projects/projects.html
@@ -361,7 +361,7 @@ gtag('config', 'G-3THLGK2G1N', { 'anonymize_ip': true});
 <span class="menu-text">Projects</span></a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="https://drive.google.com/file/d/1GCkPSaetzVUy3luxc_i1LqJS0ahBs0cY/view?usp=sharing" target="_blank">
+  <a class="nav-link" href="../../Zabirul_Islam_CV.pdf" target="_blank">
 <span class="menu-text">Resume</span></a>
 
 </li>  
